unpackaged/main/default/objects/Account/fields/Harmonic_Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Harmonic_Match_Status__c</fullName>
    <description>Status used to indicate the status of an associated Harmonic Company Profile record related to the given Account record.

Matched: Account record is successfully matched to a Harmonic Company Profile record.
Needs Review: Account data issue has been submitted and needs review from the Rev Ops team.
Reviewed: Rev Ops team has confirmed the data issue and is working on correcting.
Reported: Rev Ops team has submitted a correction request to the Harmonic team.
Unmatched: Account is unmatched from a Harmonic Company Profile record and needs to be resynced.
Not Found: No Harmonic Company Profile record is a suitable match for the Account record.

External Systems Utilization: Retool</description>
    <inlineHelpText>Status used to indicate the status of an associated Harmonic Company Profile record related to the given Account record.</inlineHelpText>
    <label>Harmonic Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Reported</fullName>
            </value>
            <value>
                <fullName>Unmatched</fullName>
            </value>
            <value>
                <fullName>Not Found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>