unpackaged/main/default/objects/Account/fields/Has_linked_Harmonic_Profile__c.field-meta.xml
<CustomField>
    <fullName>Has_linked_Harmonic_Profile__c</fullName>
    <description>Returns TRUE if there is a related Harmonic Company Profile record associated with the Account.</description>
    <formula>IF(ISBLANK(Harmonic_Company_Profile__c),FALSE,TRUE)</formula>
    <inlineHelpText>Returns TRUE if there is a related Harmonic Company Profile record associated with the Account.</inlineHelpText>
    <label>Has Linked Harmonic Profile?</label>
    <type>Checkbox</type>
</CustomField>