unpackaged/main/default/objects/Account/fields/Has_Pending_New_Owner__c.field-meta.xml
<CustomField>
    <fullName>Has_Pending_New_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE if the `New Owner` is different than the current `Owner` value.</description>
    <inlineHelpText>TRUE if the `New Owner` is different than the current `Owner` value.</inlineHelpText>
    <label>Has Pending New Owner?</label>
    <type>Checkbox</type>
</CustomField>