unpackaged/main/default/objects/Account/fields/Has_Pending_New_Segment__c.field-meta.xml
<CustomField>
    <fullName>Has_Pending_New_Segment__c</fullName>
    <description>TRUE if the `New Segment` is different than the current `Segment` value.</description>
    <formula>NOT(ISPICKVAL(New_Segment__c,&quot;&quot;)) &amp;&amp; TEXT(New_Segment__c) != TEXT(Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TRUE if the `New Segment` is different than the current `Segment` value.</inlineHelpText>
    <label>Has Pending New Segment?</label>
    <type>Checkbox</type>
</CustomField>