unpackaged/main/default/objects/Account/fields/Hierarchy_ID__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_ID__c</fullName>
    <description>Returns the ID of the `Ultimate Parent Account` record. If there are no hierarchical relationships presents, it will return the ID of the current Account.</description>
    <formula>CASESAFEID(IF(ISBLANK(Ultimate_Parent_Account__c),Id,Ultimate_Parent_Account__c))</formula>
    <inlineHelpText>Returns the ID of the `Ultimate Parent Account` record. If there are no hierarchical relationships presents, it will return the ID of the current Account.</inlineHelpText>
    <label>Hierarchy ID</label>
    <type>Text</type>
</CustomField>