unpackaged/main/default/objects/Account/fields/Holdover_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Holdover_Expiration_Date__c</fullName>
    <label>Holdover Expiration Date</label>
    <type>Date</type>
</CustomField>