unpackaged/main/default/objects/Account/fields/I_am_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>I_am_Account_Owner__c</fullName>
    <description>Helper field that returns TRUE if the running user is the current owner of Account record.</description>
    <formula>$User.Id=OwnerId</formula>
    <inlineHelpText>Helper field that returns TRUE if the running user is the current owner of Account record.</inlineHelpText>
    <label>I am Account Owner?</label>
    <type>Checkbox</type>
</CustomField>