unpackaged/main/default/objects/Account/fields/I_am_Sales_Development_Representative__c.field-meta.xml
<CustomField>
    <fullName>I_am_Sales_Development_Representative__c</fullName>
    <description>Helper field that returns TRUE if the running user is the current `Sales Development Representative` on the Account Record.</description>
    <formula>IF( Sales_Development_Representative__r.User_ID_case_safe__c = $User.User_ID_case_safe__c , TRUE, FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Helper field that returns TRUE if the running user is the current `Sales Development Representative` on the Account Record.</inlineHelpText>
    <label>I am Sales Development Representative?</label>
    <type>Checkbox</type>
</CustomField>