unpackaged/main/default/objects/Account/fields/ICP_Type__c.field-meta.xml
<CustomField>
    <fullName>ICP_Type__c</fullName>
    <description>Classifies the Account record by its ICP type (currently Tech or Non-Tech). We might expand on this in the future as new ICP Types are identified.

External Systems Utilization: Polytomic</description>
    <inlineHelpText>Classifies the Account record by its ICP type (currently Tech or Non-Tech)</inlineHelpText>
    <label>ICP Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Non-Tech</fullName>
            </value>
            <value>
                <fullName>Not Enough Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>