unpackaged/main/default/objects/Account/fields/Integration_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Integration_Stamp__c</fullName>
    <description>Tag to track systems integration activity related to the Account record. Used by Sales Operations.

External Systems Utilization: Chili Piper, LeadIQ</description>
    <inlineHelpText>Tag to track systems integration activity related to the Account record. Used by Sales Operations.</inlineHelpText>
    <label>Integration Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>