unpackaged/main/default/objects/Account/fields/Is_Aggregation_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Aggregation_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to flag specific Accounts that house contacts from a specific source/classification (i.e. public email domains, spam, unaffiliated contacts etc..)</description>
    <inlineHelpText>Used to flag specific Accounts that house contacts from a specific source/classification (i.e. public email domains, spam, unaffiliated contacts etc..)</inlineHelpText>
    <label>Is Aggregation Account?</label>
    <type>Checkbox</type>
</CustomField>