unpackaged/main/default/objects/Account/fields/Is_Orphan_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Orphan_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE if the Account is Orphan Orgs; the placeholder Account for unassociated Retool Orgs.</description>
    <inlineHelpText>TRUE if the Account is Orphan Orgs; the placeholder Account for unassociated Retool Orgs.</inlineHelpText>
    <label>Is Orphan Account?</label>
    <type>Checkbox</type>
</CustomField>