unpackaged/main/default/objects/Account/fields/Is_Retool_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Retool_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Retool Account?</label>
    <type>Checkbox</type>
</CustomField>