unpackaged/main/default/objects/Account/fields/Is_ROE_Hold__c.field-meta.xml
<CustomField>
    <fullName>Is_ROE_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to true, this Account will not be automatically moved back to the Account Pool as per current ROE.</description>
    <inlineHelpText>If set to true, this Account will not be automatically moved back to the Account Pool as per current ROE.</inlineHelpText>
    <label>Is ROE Hold?</label>
    <type>Checkbox</type>
</CustomField>