unpackaged/main/default/objects/Account/fields/Is_Test_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this account is used for testing or other internal purposes.

External Systems Utilization: Xactly</description>
    <inlineHelpText>True if this account is used for testing or other internal purposes.</inlineHelpText>
    <label>Is Test Account?</label>
    <type>Checkbox</type>
</CustomField>