unpackaged/main/default/objects/Account/fields/LeanData__LD_EmailDomains__c.field-meta.xml
<CustomField>
    <fullName>LeanData__LD_EmailDomains__c</fullName>
    <description>Derived Email Domains from contact emails</description>
    <label>LD_EmailDomains</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>