unpackaged/main/default/objects/Account/fields/LG_Invalidated_Reason__c.field-meta.xml
<CustomField>
    <fullName>LG_Invalidated_Reason__c</fullName>
    <description>Reason why this account record could not be enriched by LeadGenius.

External Systems Utilization: LeadGenius</description>
    <inlineHelpText>Reason why this account record could not be enriched by LeadGenius.</inlineHelpText>
    <label>LG: Invalidated Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>