unpackaged/main/default/objects/Account/fields/Mapped_Domains__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Domains__c</fullName>
    <description>Concatenated string of associated Domain Map records.</description>
    <inlineHelpText>Concatenated string of associated Domain Map records.</inlineHelpText>
    <label>Mapped Domains</label>
    <type>TextArea</type>
</CustomField>