unpackaged/main/default/objects/Account/fields/MK_Account_Engagement_Signals__c.field-meta.xml
<CustomField>
    <fullName>MK_Account_Engagement_Signals__c</fullName>
    <description>Reasons for the MadKudu Engagement and latest activities
Signals customizable on MadKudu&#39;s platform app.madkudu.com</description>
    <inlineHelpText>Reasons for the MK Account Engagement score, and latest activities of the people in the account.
Signals customizable on MadKudu&#39;s platform</inlineHelpText>
    <label>MK Account Engagement Signals</label>
    <length>1054</length>
    <type>LongTextArea</type>
</CustomField>