unpackaged/main/default/objects/Account/fields/MK_Customer_Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>MK_Customer_Fit_Score__c</fullName>
    <description>MadKudu Customer Fit score (from 0 to 100)
Predicts if this account looks like a potential customer based on the analysis of past customers and their firmo, demo, techno... enrichment.
Scoring model controllable on MadKudu&#39;s platform app.madkudu.com</description>
    <inlineHelpText>Score from 0 to 100. Prioritize the ones with the highest score as they should be the best fit for your product</inlineHelpText>
    <label>MK Customer Fit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>