unpackaged/main/default/objects/Account/fields/Most_Recent_Activity_At__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Activity_At__c</fullName>
    <description>Most recent timestamp of the most recent Task or Event.</description>
    <formula>IF(Most_Recent_Task_At__c &gt;= Most_Recent_Event_At__c || ISBLANK(Most_Recent_Event_At__c),Most_Recent_Task_At__c,Most_Recent_Event_At__c)</formula>
    <inlineHelpText>Most recent timestamp of the most recent Task or Event.</inlineHelpText>
    <label>Most Recent Activity At</label>
    <type>Date</type>
</CustomField>