unpackaged/main/default/objects/Account/fields/Most_Recent_Lost_Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Lost_Opportunity_Close_Date__c</fullName>
    <description>Rollup of when the most recent Closed Lost/Churn Opportunity was closed.</description>
    <inlineHelpText>Rollup of when the most recent Closed Lost/Churn Opportunity was closed.</inlineHelpText>
    <label>Most Recent Lost Opportunity Close Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Lost, Churn</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>