unpackaged/main/default/objects/Account/fields/Most_Recent_Release_Details__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Release_Details__c</fullName>
    <description>Additional detail as to why the rep deposited the Account back into the Account Pool</description>
    <inlineHelpText>Additional detail as to why the rep deposited the Account back into the Account Pool</inlineHelpText>
    <label>Most Recent Release Details</label>
    <type>TextArea</type>
</CustomField>