unpackaged/main/default/objects/Account/fields/Most_Recent_SDR_Activity__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_SDR_Activity__c</fullName>
    <description>Date stamp of the most recent activity logged by an SDR.

External Systems Utilization:</description>
    <inlineHelpText>Date stamp of the most recent activity logged by an SDR.</inlineHelpText>
    <label>Most Recent SDR Activity</label>
    <type>Date</type>
</CustomField>