unpackaged/main/default/objects/Account/fields/Most_Recent_SQO_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_SQO_Date__c</fullName>
    <description>Rollup of the most recent Opportunity S2 date stamp at the Account.</description>
    <inlineHelpText>Rollup of the most recent Opportunity S2 date stamp at the Account.</inlineHelpText>
    <label>Most Recent SQO Date</label>
    <summarizedField>Opportunity.Sales_Qualified_At__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>