unpackaged/main/default/objects/Account/fields/Most_Recent_Task_At__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Task_At__c</fullName>
    <description>Most recent created date for all Tasks related to this Account.</description>
    <inlineHelpText>Most recent created date for all Tasks related to this Account.</inlineHelpText>
    <label>Most Recent Task At</label>
    <type>Date</type>
</CustomField>