unpackaged/main/default/objects/Account/fields/Moves_back_to_pool_at__c.field-meta.xml
<CustomField>
    <fullName>Moves_back_to_pool_at__c</fullName>
    <description>The date after which the account will be automatically moved back into the Account Pool based on current ROE. #ROE</description>
    <formula>IF(  
 Is_ROE_Hold__c || ISBLANK(Owner.Account_Max_Days_Without_Activity__c) || Num_Open_Opportunities__c &gt; 0 || NOT(ISPICKVAL(Owner.Subteam__c,&quot;GRW&quot;)),
 null,
 IF(ISBLANK(Most_Recent_Sales_Activity__c) || Most_Recent_Sales_Activity__c &lt; DATEVALUE(Owner_Assigned_At__c) ,DATEVALUE(Owner_Assigned_At__c),Most_Recent_Sales_Activity__c) + Owner.Account_Max_Days_Without_Activity__c + 1  
)</formula>
    <inlineHelpText>The date after which the account will be automatically moved back into the Account Pool based on current ROE.</inlineHelpText>
    <label>Moves Back to Pool At</label>
    <type>Date</type>
</CustomField>