unpackaged/main/default/objects/Account/fields/New_Sales_Development_Representative__c.field-meta.xml
<CustomField>
    <fullName>New_Sales_Development_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to associated `User Extension` record. Used to plan for Account ownership/SDR transitions.</description>
    <inlineHelpText>Link to associated `User Extension` record. Used to plan for Account ownership/SDR transitions.</inlineHelpText>
    <label>New Sales Development Representative</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR (2 AND 3)</booleanFilter>
        <filterItems>
            <field>User_Extension__c.TBH_Index__c</field>
            <operation>notEqual</operation>
            <value />
        </filterItems>
        <filterItems>
            <field>User_Extension__c.User__r.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User_Extension__c.Team_Current__c</field>
            <operation>equals</operation>
            <value>Sales Development</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User_Extension__c</referenceTo>
    <relationshipLabel>Accounts (New Sales Development Representative)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>