unpackaged/main/default/objects/Account/fields/New_Segment__c.field-meta.xml
<CustomField>
    <fullName>New_Segment__c</fullName>
    <description>Pending segment used for planning purposes.

External Systems Utilization: MadKudu</description>
    <inlineHelpText>Pending segment used for planning purposes.</inlineHelpText>
    <label>New Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segment</valueSetName>
    </valueSet>
</CustomField>