unpackaged/main/default/objects/Account/fields/Next_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Renewal_Date__c</fullName>
    <description>The contract start date of the upcoming/next contract term</description>
    <inlineHelpText>The contract start date of the upcoming/next contract term</inlineHelpText>
    <label>Next Renewal Date</label>
    <summarizedField>Opportunity.Term_Start_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Renewal</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>