unpackaged/main/default/objects/Account/fields/Num_Action_Required_Journeys__c.field-meta.xml
<CustomField>
    <fullName>Num_Action_Required_Journeys__c</fullName>
    <description>Number of Open Journey records with Action Required values from all related Contacts at the Account.

External Systems Utilization: Polytomic</description>
    <inlineHelpText>Number of Open Journey records with Action Required values from all related Contacts at the Account.</inlineHelpText>
    <label># Action Required Journeys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>