unpackaged/main/default/objects/Account/fields/Num_Active_Committed_Air_Gapped_BUs__c.field-meta.xml
<CustomField>
    <fullName>Num_Active_Committed_Air_Gapped_BUs__c</fullName>
    <label># Active Committed Air-Gapped BUs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>