unpackaged/main/default/objects/Account/fields/Num_Active_Committed_BUs__c.field-meta.xml
<CustomField>
    <fullName>Num_Active_Committed_BUs__c</fullName>
    <description>Number of active Business Units related to the account in the Committed business line.

External Systems Utilization: DLRS</description>
    <inlineHelpText>Number of active Business Units related to the account in the Committed business line.</inlineHelpText>
    <label># Active Committed BUs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>