unpackaged/main/default/objects/Account/fields/Num_Active_Committed_Orgs__c.field-meta.xml
<CustomField>
    <fullName>Num_Active_Committed_Orgs__c</fullName>
    <description>Number of Retool Orgs related to the account with a Committed Stripe subscription in an &quot;active&quot; or &quot;past_due&quot; state.

External Systems Utilization: DLRS</description>
    <inlineHelpText>Number of Retool Orgs related to the account with a Committed Stripe subscription in an &quot;active&quot; or &quot;past_due&quot; state</inlineHelpText>
    <label># Active Committed Orgs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>