unpackaged/main/default/objects/Account/fields/Num_Active_Partner_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Num_Active_Partner_Relationships__c</fullName>
    <description>Number of Partner Relationships related to the Account with a status value equal to `Active - Authorized`, `Active - Not Authorized`.</description>
    <inlineHelpText>Number of Partner Relationships related to the Account with a status value equal to `Active - Authorized`, `Active - Not Authorized`.</inlineHelpText>
    <label># Active Partner Relationships</label>
    <summaryFilterItems>
        <field>Partner_Relationship__c.Status__c</field>
        <operation>equals</operation>
        <value>Active - Authorized, Active - Not Authorized</value>
    </summaryFilterItems>
    <summaryForeignKey>Partner_Relationship__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>