unpackaged/main/default/objects/Account/fields/Num_BUs__c.field-meta.xml
<CustomField>
    <fullName>Num_BUs__c</fullName>
    <description>Number of Business Units related to the account.</description>
    <inlineHelpText>Number of Business Units related to the account.</inlineHelpText>
    <label># BUs</label>
    <summaryForeignKey>Business_Unit__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>