unpackaged/main/default/objects/Account/fields/Num_Cancelled_Self_Service_Orgs__c.field-meta.xml
<CustomField>
    <fullName>Num_Cancelled_Self_Service_Orgs__c</fullName>
    <description>Number of Retool Orgs related to the account Self Service Stripe subscription in a &quot;cancelled&quot; state.

External Systems Utilization: DLRS</description>
    <inlineHelpText>Number of Retool Orgs related to the account Self Service Stripe subscription in a &quot;cancelled&quot; state.</inlineHelpText>
    <label>zOLD # Cancelled Self Service Orgs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>