unpackaged/main/default/objects/Account/fields/Num_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Num_Open_Opportunities__c</fullName>
    <description>Number of open opportunities related to the account in the Committed business line.</description>
    <inlineHelpText>Number of open opportunities related to the account in the Committed business line.</inlineHelpText>
    <label># Open Committed Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>Self Service</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>