unpackaged/main/default/objects/Account/fields/Num_Open_Renewals__c.field-meta.xml
<CustomField>
    <fullName>Num_Open_Renewals__c</fullName>
    <description>Rollup of the total Open Renewal Opportunities at the Account.</description>
    <inlineHelpText>Rollup of the total Open Renewal Opportunities at the Account.</inlineHelpText>
    <label># Open Renewals</label>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Renewal</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>