unpackaged/main/default/objects/Account/fields/Num_Open_Sales_Pipeline_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Num_Open_Sales_Pipeline_Opportunities__c</fullName>
    <description>Rollup of the total Open Sales S2 Opportunities at the Account, excluding Renewals and Professional Services</description>
    <inlineHelpText>Rollup of the total Open Sales S2 Opportunities at the Account, excluding Renewals and Professional Services</inlineHelpText>
    <label># Open Sales Pipeline Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Enterprise</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Sales_Qualified_At__c</field>
        <operation>notEqual</operation>
        <value />
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>