unpackaged/main/default/objects/Account/fields/Num_Open_Services_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Num_Open_Services_Opportunities__c</fullName>
    <description>Rollup of the total open Professional Services Opportunities at the Account, including S1.</description>
    <inlineHelpText>Rollup of the total open Professional Services Opportunities at the Account, including S1.</inlineHelpText>
    <label># Open Services Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Professional Services</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>